--- a/css/A32.css
+++ b/css/A32.css
@@ -9,3 +9,19 @@ html {
   }
   
   /* Your CSS below here */
+
+  div {
+	width: 200px;
+	height: 100px;
+	border: 1px solid rgb(187, 134, 187);
+	border-radius: 10%;
+	text-align: center;
+	padding-top: 5%;
+	margin: auto;
+	font-size: 18px;
+	background-color: plum;
+	text-shadow: black;
+	color: yellow;
+	background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0), rgb(0, 0, 0, 0.2), rgb(0,0,0,0.2));
+	box-shadow: 2.5px 2.5px black, 5px 5px 5px inset rgba(255, 255, 255, 0.5), 10px 10px 5px rgba(0, 0, 0, 0.5);
+  }
