--- a/css/A34.css
+++ b/css/A34.css
@@ -14,6 +14,9 @@ body {
   img {
       max-width: 100%;
       display: block;
+      float:left;
+      height: 200px;
+      width: 200px;
   }
   
   .logo {
@@ -25,21 +28,34 @@ body {
   
   .grid {
     margin: 0 auto;
+    display: grid;
     padding: 0 20px;
     max-width: 980px;
+    grid-template-columns: 3fr, 1fr;
+    height: 200px;
+    grid-gap: 10px;
   }
   
   nav {
     background-color: #000;
     padding: .5em;
+    position: sticky;
+    top: 0;
   }
   
   nav ul {
     margin: 0;
     padding: 0;
-    list-style: none;
+    list-style-type:none;
+    overflow: hidden;
+    justify-items: auto;
   }
   
+  nav li {
+    float:left;
+    margin-left: 125px;
+  }
+
   nav a {
     color: #fff;
     text-decoration: none;
@@ -50,8 +66,15 @@ body {
     list-style: none;
     margin: 0;
     padding: 0;
+    column-gap: 5px;
+    columns: 2;
   }
 
   .feature {
       width: 200px;
+  }
+
+  aside {
+    grid-column: span2;
+    
   }
