--- a/css/A42.css
+++ b/css/A42.css
@@ -1,3 +1,10 @@
+/*
+	Name: Emidio Guidotti
+	File: A42.css
+	Date: 22 March 2024
+	Supply A42 with details 
+  */
+
 h1 {
   font-family: helvetica, arial, sans-serif;
   text-align: center;
