--- a/css/A43.css
+++ b/css/A43.css
@@ -1,3 +1,10 @@
+/*
+	Name: Emidio Guidotti
+	File: A43.css
+	Date: 22 March 2024
+	Supply A43/A44 with details 
+  */
+
 html, body {
     margin: 0;
   }
